src/styles/style.css
/* Reset e normalização */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  list-style: none;
  outline: none;
  -webkit-font-smoothing: antialiased !important;
  -moz-osx-font-smoothing: grayscale !important;
}

/* Escala base para REMs */
html {
  font-size: 62.5%;
  height: 100%;
}

/* Estilos gerais */
body {
  font-family: 'Space Grotesk', sans-serif;
  font-size: 1.6rem;
  background-color: #fff;
  color: #000;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  height: 100%;
}

/* Root container */
#root {
  width: 100%;
  max-width: 1240px;
  margin: 0 auto;
  /* height: 100%; */
  height: 100vh;
}

/* Layout principal */
.layout-container {
  display: flex;
  flex-direction: column;
  /* height: 100%; */
  min-height: 100vh;
  padding: 2rem;
  gap: 2rem;
  /* overflow: hidden; */
}

/* Header ocupa a largura total */
.layout-header {
  flex: 0 0 auto;
}

/* Grid principal: Dashboard e Extrato */
.layout-main {
  display: grid;
  grid-template-columns: 55% 45%;
  /* gap: 2rem; */
  /* flex: 1; */
  /* height: 100%; */

  /* Permite que o grid se ajuste ao conteúdo */
  /* min-height: 0; */
  /* overflow: hidden; */
}

/* MFEs ocupam 100% do espaço */
.layout-dashboard,
.layout-extrato {
  width: 100%;
  height: 100%;
}

.layout-extrato {
  background-color: red;
}

/* Responsividade para telas pequenas */
@media (max-width: 768px) {
  .layout-main {
    grid-template-columns: 1fr;
    grid-template-rows: auto auto;
  }

  .layout-dashboard,
  .layout-extrato {
    height: auto;
  }
}

